--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <version>2021.0-SNAPSHOT</version>
 
   <name>Advent of Code 2021</name>
-  <url>https://adventofcode.com/2021</url>
+  <url>https://github.com/0hex/advent_of_code_2021</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
