--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           java-version: 11
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots
+        run: mvn --batch-mode --update-snapshots verify
