--- a/day3/pom.xml
+++ b/day3/pom.xml
@@ -13,6 +13,10 @@
 
     <artifactId>day3</artifactId>
 
+    <properties>
+        <exec.mainClass>com.nohex.aoc.day3.SolutionKt</exec.mainClass>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.nohex.aoc</groupId>
