--- a/day6/pom.xml
+++ b/day6/pom.xml
@@ -13,6 +13,10 @@
 
     <artifactId>day6</artifactId>
 
+    <properties>
+        <exec.mainClass>com.nohex.aoc.day6.SolutionKt</exec.mainClass>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.nohex.aoc</groupId>
