--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>day5</module>
         <module>day6</module>
         <module>day7</module>
+        <module>day8</module>
     </modules>
 
     <properties>
