--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -21,6 +21,14 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <mainClass>-</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
