--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
       - name: Run with Maven
-        run: mvn --batch-mode --update-snapshots exec:java
+        run: mvn --batch-mode --update-snapshots compile exec:java
