--- a/day16/pom.xml
+++ b/day16/pom.xml
@@ -11,11 +11,11 @@
         <version>2021.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>day15</artifactId>
+    <artifactId>day16</artifactId>
 
     <properties>
         <!-- `mvn exec:java` shows the solutions -->
-        <exec.mainClass>com.nohex.aoc.day15.SolutionKt</exec.mainClass>
+        <exec.mainClass>com.nohex.aoc.day16.SolutionKt</exec.mainClass>
     </properties>
 
     <dependencies>
@@ -29,21 +29,13 @@
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.kotest</groupId>
-            <artifactId>kotest-framework-api-jvm</artifactId>
+            <artifactId>kotest-assertions-shared-jvm</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.kotest</groupId>
-            <artifactId>kotest-assertions-shared-jvm</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
